# bigdataplatforms

./: .gitignore  .pre-commit-config.yaml  AUTHORS  README.md  assignment1-faq.md  assignment2-faq.md  computinginfrastructures.md  faq.md  ruff.toml  schedule.md  violations.md
tutorials/airflow/: README.md  Tuorial.md  airflow-docker-compose.yaml  docker-compose.yaml  postgres_compose.yaml  pyproject.toml
tutorials/airflow/alarmanalytics/: README.md  analytics.py  bts_analytics.py  bts_analytics_cassandra.py  notification.py
tutorials/airflow/alarmanalytics/analytics/: analytics_functions.py  notification.py
tutorials/airflow/alarmanalytics_cassandra/: README.md  bronze_to_silver_analytics_cassandara.py  bronze_to_silver_analytics_cassandra.py  bts_analytics_cassandara.py  bts_analytics_cassandra.py
tutorials/airflow/alarmanalytics_cassandra/analytics/: analytics_functions_cassandra.py  notification.py
tutorials/airflow/brone_silver_cassandra/: brozensilver_analytics_cassandara.py
tutorials/airflow/brone_silver_cassandra/analytics/: analytics_functions.py  notification.py
tutorials/airflow/camerastateuploadfile/: README.md  camera_state_upload.py
tutorials/airflow/camerastateuploadfile/dummy-notificationservice/: package-lock.json  package.json
tutorials/airflow/dummy-notificationservice/: simple_rest.js
tutorials/airflow/terraform/: main.tf  variables.tf
tutorials/basicdask/: README.md  pyproject.toml
tutorials/basicdask/src/basicdask/: __init__.py  dask_dataframe.py  dask_delayed_future_ex.py  dask_distributed_taxi_amount_calculation.py  dask_taxi_amount_calculation.py
tutorials/basicdisquery/: README.md  pyproject.toml
tutorials/basicdisquery/config_examples/: config.yaml  multiquery.sql
tutorials/basicdisquery/config_examples/etc/: config.properties  jvm.config  node.properties
tutorials/basicdisquery/src/basicdisquery/: __init__.py  multi_query_trino.py  query_trino.py
tutorials/basickafka/code/: pyproject.toml  requirements.txt  simple_kafka_consumer.py  simple_kafka_producer.py
tutorials/servicediscovery/: README.md  btsdaas.json  consul-server.sh  mongocheck.py  mongoservice.json  package-lock.json  package.json  pyproject.toml  simple_list.js  simple_register.js
tutorials/servicediscovery/json_samples/: mongoservice.json  simple_rest.json
(+282 files in other folders)
