[project]
name = "basickafka"
version = "0.1.0"
description = "Simple example code working with Kafka"
requires-python = ">=3.12"
dependencies = ["confluent-kafka>=2.8.0", "pandas>=2.2.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
